manifests/forgejo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-app-service
spec:
  selector:
    app: forgejo-app
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
